# CrazyTang

./: .gitignore  .gitmodules  CrazyTang.sln  README.md  run_all_tests.py  run_client_cli.py
.github/workflows/: CI.yml
3rd/tomlplusplus-1.3.0/vs/: simple_parser.vcxproj
asset/level/: map.json
client/source/: Background.h  Collider.cpp  Collider.h  Game.cpp  Login.h  Login_Test.cpp  Map.cpp  MessageHandler.cpp  MessageHandler.h  MessageHandler_Test.cpp  Move.cpp  Move.h  Net.cpp  Net.h  Replication.cpp  Replication.h  main.cpp
client/vs/: Client.vcxproj  CrazyTang.sln  client.vcxproj  client.vcxproj.filters
client_cli/: CMakeLists.txt  main.cpp
client_core/: CMakeLists.txt  Login.h
client_gui/: CMakeLists.txt  client_gui.cpp  client_gui.h  shell.cpp
client_logic/: Login.h
client_logic/vs/: client_logic.vcxproj
client_ue4/CrazyTang/: CrazyTang.uproject
client_ue4/CrazyTang/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
client_ue4/CrazyTang/Content/: CrazyTangGameMode.uasset  CrazyTangPawn.uasset  NewMap.umap  Voxel.uasset
client_ue4/CrazyTang/Source/: CrazyTang.Target.cs  CrazyTangEditor.Target.cs
client_ue4/CrazyTang/Source/CrazyTang/: CrazyTang.Build.cs  CrazyTang.cpp  CrazyTangGameModeBase.cpp  CrazyTangGameModeBase.h  CrazyTangPawnBase.cpp  CrazyTangPawnBase.h  MyPawn.cpp  MyPawn.h
client_view/: AnimatedSprite.h  Background.cpp  Math.cpp  Texture.cpp  Transformable.h
client_view/source/: Game.cpp  Login.h  Render.h  Sprite.h
client_view/vs/: client_view.vcxproj  client_view.vcxproj.filters
common/: Acceptor.h  Archive.cpp  Archive.h  AsyncConnect.cpp  ComponentTraits.h  Entity.cpp  Entity.h  Math.cpp  Math.h  Move.cpp  Move.h  MoveSystem.cpp  MoveSystem.h  Name.h  Net.h  NetAgent.h  Packet.cpp  Packet_Test.cpp  Pipe.h  Player.cpp  Player.h  Position.h  Socket.cpp  Socket.h  UUID.h  Velocity.h  Voxel.cpp  Voxel.h  VoxelSystem.cpp  VoxelSystem.h  fps.h
common/source/: Acceptor.cpp  Acceptor.h  Acceptor_Test.cpp  AsyncConnect.h  Connection.cpp  Connection.h  Connection_Test.cpp  ECS.cpp  ECS.h  ECS_Test.cpp  Entity.cpp  Entity.h  Entity_Test.cpp  NetAgent.h  NetAgent_Test.cpp  Packet.cpp  Packet.h  Packet_Test.cpp  Pipe.cpp  Pipe.h  Pipe_Test.cpp  Serializer.cpp  Serializer.h  Serializer_Test.cpp  Socket.cpp  Socket.h  Socket_Test.cpp  main.cpp
common/vs/: common.vcxproj  common.vcxproj.filters
doc/: serialization_framework.md
server/: CMakeLists.txt  ConnectionInfo.h  Login.h  Login_Test.cpp  Player.cpp  Player.h  Server.cpp  Server.h  VoxelWatcher.cpp  VoxelWatcher.h  main.cpp
server/source/: CMakeLists.txt  Connection.cpp  Connection.h  Connection_Test.cpp  Login.h  Login_Test.cpp  NetAgent.h  NetAgent_Test.cpp  PlayerAgent.h  PlayerAgent_Test.cpp  Server.cpp  Server.h  Server_Test.cpp  main.cpp
server/vs/: server.vcxproj  server.vcxproj.filters
source/: AnimatedSprite.cpp  AnimatedSprite.h  Animator.h  Background.cpp  Background.h  Camera.cpp  Camera.h  Collider.cpp  Game.cpp  Game.h  Input.cpp  Input.h  Map.cpp  MapLoader.cpp  MapLoader.h  Math.cpp  Math.h  Move.cpp  Move.h  Net.cpp  Net.h  Player.cpp  Player.h  Render.cpp  Renderer.cpp  Renderer.h  Replication.cpp  Replication.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Transformable.cpp  Transformable.h  main.cpp
test/: Acceptor_Test.cpp  Archive_Test.cpp  BitwiseComponentTraits_Test.cpp  CMakeLists.txt  ClientLogin_Test.cpp  Entity_Test.cpp  Login_Test.cpp  MoveSystem_Test.cpp  Move_Test.cpp  NetAgent_Test.cpp  Packet_Test.cpp  Pipe_Test.cpp  Player_Test.cpp  Position_Test.cpp  Serializer_Test.cpp  ServerLogin_Test.cpp  ServerPlayer_Test.cpp  Server_Test.cpp  Socket_Test.cpp  Velocity_Test.cpp
test/source/: Acceptor_Test.cpp  main.cpp
test/vs/: test.vcxproj  test.vcxproj.filters
tools/: client_cli.py  client_core.py  client_gui.py  ct_common.py  server.py  test.py
vs/: CrazyTang.sln  CrazyTang.vcxproj  CrazyTang.vcxproj.filters
